# AI-Daily

./: .gitignore  README.md  pyproject.toml
aid/: cli.py  config.py  history.py  llm.py
aid/commands/: journal.py  plan.py  recipe.py  summarize.py  translate.py
examples/: config.example.toml
tests/: test_history.py  test_summarize_fetch.py
