[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-daily"
version = "0.1.0"
description = "Small Python utilities powered by LLMs for everyday life"
authors = [{name = "0xwagurii69"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.25",
    "click>=8.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
aid = "aid.cli:main"

[project.urls]
Homepage = "https://github.com/0xwagurii69/ai-daily"

[tool.setuptools.packages.find]
where = ["."]
include = ["aid*"]
